// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Notification /> spec renders the component 1`] = `
<DocumentFragment>
  <section
    aria-label="Notification"
    class="inline notification medium info"
  >
    <div
      class="content"
    >
      <div
        aria-level="2"
        class="label"
        role="heading"
      >
        <svg
          aria-hidden="true"
          aria-label="info-circle-fill"
          class="icon s icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M12 3C7.02944 3 3 7.02944 3 12C3 16.9706 7.02944 21 12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3ZM13 10V16.5H15V18H9V16.5H11V11.5H9V10H13ZM11.8125 6C12.5374 6 13.125 6.5876 13.125 7.3125C13.125 8.03735 12.5374 8.625 11.8125 8.625C11.0876 8.625 10.5 8.03735 10.5 7.3125C10.5 6.5876 11.0876 6 11.8125 6Z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
        This is the label text
      </div>
      <div
        class="body"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`<Notification /> spec renders the component without optional label 1`] = `
<DocumentFragment>
  <section
    aria-label="Notification"
    class="inline notification medium info"
  >
    <div
      class="content"
    >
      <div
        class="body"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`<Notification /> spec uses toast notification props in non-inline notifications 1`] = `
<DocumentFragment>
  <section
    aria-label="Notification"
    class="bottom-center notification medium info"
    role="alert"
    style="transform: translate3d(-50%, 32px, 0); opacity: 0.66;"
  >
    <div
      class="content"
    >
      <div
        class="label"
      >
        <svg
          aria-hidden="true"
          aria-label="info-circle-fill"
          class="icon s icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M12 3C7.02944 3 3 7.02944 3 12C3 16.9706 7.02944 21 12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3ZM13 10V16.5H15V18H9V16.5H11V11.5H9V10H13ZM11.8125 6C12.5374 6 13.125 6.5876 13.125 7.3125C13.125 8.03735 12.5374 8.625 11.8125 8.625C11.0876 8.625 10.5 8.03735 10.5 7.3125C10.5 6.5876 11.0876 6 11.8125 6Z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
        This is the label text
      </div>
      <div
        class="body"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.
      </div>
    </div>
  </section>
</DocumentFragment>
`;
